--- a/CSS/style.css
+++ b/CSS/style.css
@@ -48,7 +48,7 @@ h3 {
   position: absolute;
 }
 
-@media  only screen and (max-device-width : 600px){
+@media  only screen and (max-width : 600px){
     .options-box {
         flex-direction: column;
         height: auto;
